<resources>
    <string name="app_name">Bco Pay</string>
    <string name="signin">Sign In</string>
    <string name="registration">Registration</string>
    <string name="shopkeeper">Shopkeeper</string>
    <string name="customer">Customer</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Open Navigation Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_wrong">Something went wrong</string>
    <!--    <string name="admob_id">ca-app-pub-2624883599415339~1491469740</string>-->
    <!--    <string name="reward_ads_id">ca-app-pub-2624883599415339/1231615295</string>-->

    <!--<string name="playStoreLink"><a href="https://play.google.com/store/apps/details?id=com.ALife.alife">update</a></string>-->
    //admob id
    <string name="admob_id">ca-app-pub-9914022847917901~2831453640</string>
    //rewards ad id
    <string name="reward_ads_id"> ca-app-pub-9914022847917901/8146509442</string>
    <string name="print_barcode">প্রিন্ট বারকোড</string>
    <string name="password">পাসওয়ার্ড</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an account</string>
    // test
    //admob id
    <!--<string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    //rewards ad id
    <string name="reward_ads_id">ca-app-pub-3940256099942544/5224354917</string>-->
    <string name="restart">restart</string>
    <string name="default_notification_channel_id">ALIFEID</string>
    <string name="account_of_life">Account of Life</string>
    <string name="warning">WARNING!!</string>
    <string name="your_session_has_been_out_please_login_again">Your session has been out, please login again.</string>
    <string name="powered_by_text"><![CDATA[Powered By <b>ALife World</b>]]></string>
    <string name="go_to_home">Go To Home</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="download">Download</string>
    <string name="items">Items</string>
    <string name="search">Search</string>
    <string name="customers_list">Customers List</string>
    <string name="lat_buying_time">সর্বশেষ ক্রয় সময়</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="update">UPDATE</string>
    <string name="please_update_your_app_in_order_to_get_new_features">Please update your app in order to get new features.</string>
    <string name="update_available">Update Available</string>
    <string name="login_with_otp">Login With OTP</string>
    <string name="sign_in">Sign In</string>
    <string name="otp_login">OTP Login</string>


</resources>