<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_available"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:fontFamily="@font/arvo_bold"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_update"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/please_update_your_app_in_order_to_get_new_features"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/shape"
            android:backgroundTint="@color/orange"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>