<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_round_shape_bg"
    tools:context=".view.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/default_color"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alifelogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/signin"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        style="@style/ToggleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:weightSum="2"
        app:checkedButton="@id/customerID"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/customerID"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/toggle_button_selector"
            android:text="@string/customer"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shopkeeperID"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/toggle_button_selector"
            android:text="@string/shopkeeper"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/contactText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:drawableLeft="@drawable/baseline_phone_android_24"
        android:drawablePadding="5dp"
        android:drawableTint="@color/black"
        android:hint="@string/phone"
        android:textSize="14sp"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleGroup" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="5dp"
        android:drawableTint="@color/black"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:textSize="14sp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactText" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/purple"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:iconTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText" />

    <TextView
        android:id="@+id/forgotPasswordID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/arrow_back"
        android:text="@string/forgot_password"
        android:textColor="@color/light_grey"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordID" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/registerID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple"
        app:icon="@drawable/arrow_forwarded"
        app:iconTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>

